# torchwave

./: .gitignore  Pipfile  setup.cfg  test.npy
example/: gtzan.py
src/torchwave/: __init__.py
src/torchwave/datasets/: __init__.py  dataset_folder.py  emd_mixup.py  gtzan.py  mixup.py  remix.py  utils.py
src/torchwave/metrics/: __init__.py  acc.py
src/torchwave/transforms/: __init__.py  clip.py  constant_q.py  crop.py  melspectrogram.py  noise.py  normalize.py  peaking_filter.py  random_apply.py  random_augmentation.py  random_clip.py  random_crop.py  random_noise.py  random_peaking_filter.py  random_time_shift.py  random_time_stretch.py  repeat.py  stft.py  time_shift.py  time_stretch.py  wavelet.py
src/torchwave/utils/: __init__.py  save_audio.py  train_val_split.py
tests/datasets/: test_utils.py
tests/metrics/: test_acc.py
tests/transforms/: test_clip.py  test_constant_q.py  test_crop.py  test_melspectrogram.py  test_noise.py  test_normalize.py  test_peaking_filter.py  test_random_apply.py  test_random_clip.py  test_random_crop.py  test_random_noise.py  test_random_peaking_filter.py  test_random_time_shift.py  test_random_time_stretch.py  test_repeat.py  test_stft.py  test_time_shift.py  test_time_stretch.py  test_wavelet.py
tests/utils/: test_save_audio.py
