[metadata]
name = torchwave
version = 0.0.1
description = torchwave

[options]
package_dir=
    =src
packages=find:
setup_requires =
        setuptools_scm
install_requires=
        numpy
        torch
        librosa
        scipy
        tqdm
        EMD-signal
        soundfile
tests_require =
        pytest

[options.packages.find]
where=src
